Use device_private() where appropriate.

Noted by Paul Goyette in PR#39110.